# sem23_project

./: .gitignore  Buffer.cpp  CMakeLists.txt  Editor.cpp  README.md  calculate.cpp  class_diagram.dia.autosave  determinant.cpp  grammar.cpp  input.cpp  lib  main.cpp  matrix_window.cpp  nothing selected  old_main.cpp  test_main.cpp  token_tokenstream.cpp  variable.cpp
headers/: calculate.h  grammar.h  input.h  matrix_window.h  token_tokenstream.h  variable.h
new/: determinant.cpp  determinant.h
old_proj/: input.cpp  main.cpp
old_proj/headers/: Editor.h  determinant.h  matrix_window.h  menu.h
reviews/: Chess_project.md  Graph_War.md
src/: determinant.cpp  determinant.h  file_work.cpp  file_work.h  function_table.cpp  function_table.h  graphic.cpp  graphic.h
